event emitters for mcp and mcpo

--- a/docs/features/mcp.mdx
+++ b/docs/features/mcp.mdx
@@ -47,7 +47,7 @@ Choose **OpenAPI** if you want:
 Choose **MCP (Streamable HTTP)** if you need:
 
 * A **common tool protocol** already used by your MCP servers/clients.
-* **Streamed** tool events over HTTP with emerging ecosystem support.
+* **Streamed** protocol communication over HTTP (Note: This refers to MCP's transport-level streaming, not Open WebUI's [UI event system](/features/plugin/development/events) which is only available for native Python tools).
 
 > You don’t have to pick one: many teams expose OpenAPI internally and **wrap MCP** at the edge for specific clients.
 
