--- a/docs/features/plugin/tools/openapi-servers/index.mdx
+++ b/docs/features/plugin/tools/openapi-servers/index.mdx
@@ -25,6 +25,15 @@ By leveraging OpenAPI, we eliminate the need for a proprietary or unfamiliar com
 
 - **Future-Friendly & Stable**: Unlike less mature or experimental protocols, OpenAPI promises reliability, stability, and long-term community support.
 
+## ⚠️ Limitations
+
+While OpenAPI tools are powerful for extending Open WebUI with external services, they have some constraints compared to native Python tools:
+
+- **No real-time UI events**: OpenAPI tools cannot emit status updates, notifications, or request user input via the [event system](/features/plugin/development/events). They communicate via standard HTTP request/response only.
+- **No streaming output**: Tool responses are returned as complete results, not streamed token-by-token.
+
+If you need real-time UI feedback (progress updates, confirmations, streaming), consider implementing your tool as a [native Python Tool](/features/plugin/tools/development) instead.
+
 ## 🚀 Quickstart
 
 Get started quickly with our reference FastAPI-based implementations provided in the `servers/` directory. (You can adapt these examples into your preferred stack as needed, such as using [FastAPI](https://fastapi.tiangolo.com/), [FastOpenAPI](https://github.com/mr-fatalyst/fastopenapi) or any other OpenAPI-compatible library):
