--- a/docs/features/plugin/development/valves.mdx
+++ b/docs/features/plugin/development/valves.mdx
@@ -102,3 +102,129 @@ When rendered, this field will appear as a masked input (dots instead of charact
 Use password input types for any credential or secret that users configure in their Valves or UserValves. This is especially important for UserValves since they are configurable by end users directly from the chat interface.
 :::
 
+### Select Dropdown Input
+
+For fields where users should choose from a predefined list of options, use the select input type to render a dropdown menu. Options can be either static (hardcoded list) or dynamic (generated at runtime by a method).
+
+#### Static Options
+
+Use a list directly for options that don't change:
+
+```python
+from pydantic import BaseModel, Field
+
+class Tools:
+    class Valves(BaseModel):
+        priority: str = Field(
+            default="medium",
+            description="Processing priority level",
+            json_schema_extra={
+                "input": {
+                    "type": "select",
+                    "options": ["low", "medium", "high"]
+                }
+            }
+        )
+```
+
+You can also use label/value pairs for more descriptive options:
+
+```python
+from pydantic import BaseModel, Field
+
+class Tools:
+    class Valves(BaseModel):
+        log_level: str = Field(
+            default="info",
+            description="Logging verbosity",
+            json_schema_extra={
+                "input": {
+                    "type": "select",
+                    "options": [
+                        {"value": "debug", "label": "Debug (Verbose)"},
+                        {"value": "info", "label": "Info (Standard)"},
+                        {"value": "warn", "label": "Warning (Minimal)"},
+                        {"value": "error", "label": "Error (Critical Only)"}
+                    ]
+                }
+            }
+        )
+```
+
+#### Dynamic Options
+
+For options that need to be generated at runtime (e.g., fetching available models, databases, or user-specific resources), specify a method name as a string. The method will be called when the configuration UI is rendered:
+
+```python
+from pydantic import BaseModel, Field
+
+class Tools:
+    class Valves(BaseModel):
+        selected_model: str = Field(
+            default="",
+            description="Choose a model to use",
+            json_schema_extra={
+                "input": {
+                    "type": "select",
+                    "options": "get_model_options"  # Method name as string
+                }
+            }
+        )
+
+        @classmethod
+        def get_model_options(cls, __user__=None) -> list[dict]:
+            """
+            Dynamically fetch available models.
+            Called when the Valves configuration UI is opened.
+            """
+            # Example: Return options based on runtime state
+            return [
+                {"value": "gpt-4", "label": "GPT-4"},
+                {"value": "gpt-3.5-turbo", "label": "GPT-3.5 Turbo"},
+                {"value": "claude-3-opus", "label": "Claude 3 Opus"}
+            ]
+```
+
+The method can accept an optional `__user__` parameter to generate user-specific options:
+
+```python
+from pydantic import BaseModel, Field
+
+class Tools:
+    class UserValves(BaseModel):
+        workspace: str = Field(
+            default="",
+            description="Select your workspace",
+            json_schema_extra={
+                "input": {
+                    "type": "select",
+                    "options": "get_user_workspaces"
+                }
+            }
+        )
+
+        @classmethod
+        def get_user_workspaces(cls, __user__=None) -> list[dict]:
+            """
+            Return workspaces available to the current user.
+            __user__ contains the user's information as a dict.
+            """
+            if not __user__:
+                return []
+
+            user_id = __user__.get("id")
+            # Fetch user-specific workspaces from your data source
+            return [
+                {"value": "ws-1", "label": "Personal Workspace"},
+                {"value": "ws-2", "label": "Team Workspace"}
+            ]
+```
+
+:::tip
+Dynamic options are particularly useful for:
+- Fetching available API models from connected providers
+- Loading database or file options based on current system state
+- Presenting user-specific resources like projects or workspaces
+- Any scenario where options change based on runtime context
+:::
+
