Update reasoning effort note to explain that gpt-oss does work on ollama
After https://github.com/open-webui/open-webui/pull/20928 is merged and therefore https://github.com/open-webui/open-webui/issues/20921 is fixed, this should be updated to reflect the new state.

--- a/docs/features/chat-features/reasoning-models.mdx
+++ b/docs/features/chat-features/reasoning-models.mdx
@@ -99,7 +99,7 @@ For models that support variable reasoning depth (like some API providers), this
 - Some providers accept numeric values
 
 :::info
-Reasoning Effort is only applicable to models from specific providers that support this parameter. It has no effect on local Ollama models.
+Reasoning Effort is only applicable to models from specific providers that support this parameter. On Ollama, currently only `gpt-oss` supports this parameter.
 :::
 
 ---
