SECURITY WARNINGS tools and plugins

--- a/docs/features/pipelines/index.mdx
+++ b/docs/features/pipelines/index.mdx
@@ -53,9 +53,9 @@ Integrating Pipelines with any OpenAI API-compatible UI client is simple. Launch
 
 ## ⚡ Quick Start with Docker
 
-:::warning
+:::danger ⚠️ Security Warning
 
-Pipelines are a plugin system with arbitrary code execution — **don't fetch random pipelines from sources you don't trust**.
+Pipelines are a plugin system with arbitrary code execution — **don't fetch random pipelines from sources you don't trust**. A malicious Pipeline could access your file system, exfiltrate data, mine cryptocurrency, or compromise your system. Always review Pipeline source code before installing. See the [Security Policy](/security) for more details.
 
 :::
 
