--- a/docs/security.mdx
+++ b/docs/security.mdx
@@ -127,7 +127,7 @@ The following scenarios are **not** considered vulnerabilities because they requ
 - An admin importing code from an untrusted source
 - An attacker with write access to the data volume injecting malicious plugins
 
-These scenarios represent **admin negligence** or **environment compromise**, not vulnerabilities in Open WebUI itself. See [Rule #10 in our Security Policy](https://github.com/open-webui/open-webui/security) for details.
+These scenarios represent **admin negligence** or **environment compromise**, not vulnerabilities in Open WebUI itself. See [our Security Policy](https://github.com/open-webui/open-webui/security) for details.
 
 ## Product Security Process
 
