docs: document centralized data management and admin model controls
This update provides comprehensive documentation for three major platform enhancements:
Centralized Data Management
- Shared Chat Manager: Documents the new dashboard in Settings > Data for auditing and revoking share links (LinkSlash icon).
- File Manager: Detailed the unified dashboard for document management, including the automatic Knowledge Base and embedding cleanup logic.
- Search & Performance: Documented the 500ms search debounce and advanced sorting (Updated At, Created At) across both managers.
Admin Model Management
- Admin View Selector: Guide for status-based filtering (Enabled, Disabled, Hidden, Visible).
- Bulk Actions: Documented the new "Enable All" and "Disable All" controls in the Admin Panel for high-volume provider management.
UI/UX & Discovery
- Updated the Features Overview and FAQ sections to highlight these management tools and provide clear user navigation paths.

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -21,6 +21,10 @@ For more details on enterprise solutions and branding customizations, [click her
 
 **A:** Open WebUI provides a centralized **Shared Chats** dashboard where you can see every link you've generated. This is available to all users via **Settings > Data > Shared Chats > Manage**. From there, you can search through your shared history, re-copy links, or revoke (unshare) access to any conversation instantly.
 
+### Q: How can I manage or delete files I've uploaded?
+
+**A:** You can access the **File Manager** by going to **Settings > Data > Manage Files > Manage**. This dashboard allows you to search through all your uploaded documents, view their details, and delete them. Deleting a file here also automatically cleans up any associated Knowledge Base entries and vector embeddings.
+
 ### Q: Can I use Open WebUI in outer space (e.g., Mars and beyond) or other extreme environments?
 
 **A:** **Yes.** Open WebUI is fully self-hosted and does not rely on persistent internet connectivity, making it suitable for environments where cloud-based systems are impractical or impossible. As long as the underlying hardware can run a supported runtime, Open WebUI will function normally regardless of location.
