--- a/docs/features/workspace/index.mdx
+++ b/docs/features/workspace/index.mdx
@@ -10,5 +10,6 @@ The Workspace in Open WebUI provides a comprehensive environment for managing yo
 - [🤖 Models](./models.md) - Create and manage custom models tailored to specific purposes
 - [🧠 Knowledge](./knowledge.md) - Manage your knowledge bases for retrieval augmented generation
 - [📚 Prompts](./prompts.md) - Create and organize reusable prompts
+- [📁 Files](./files.md) - Centralized management for all your uploaded documents
 
 Each section of the Workspace is designed to give you fine-grained control over your Open WebUI experience, allowing for customization and optimization of your AI interactions.
