--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -19,11 +19,11 @@ For more details on enterprise solutions and branding customizations, [click her
 
 ### Q: How can I see a list of all the chats I've ever shared?
 
-**A:** Open WebUI provides a centralized **Shared Chats** dashboard where you can see every link you've generated. This is available to all users via **Settings > Data > Shared Chats > Manage**. From there, you can search through your shared history, re-copy links, or revoke (unshare) access to any conversation instantly.
+**A:** Open WebUI provides a centralized **Shared Chats** dashboard where you can see every link you've generated. This is available to all users via **Settings > Data Controls > Shared Chats > Manage**. From there, you can search through your shared history, re-copy links, or revoke (unshare) access to any conversation instantly.
 
 ### Q: How can I manage or delete files I've uploaded?
 
-**A:** You can access the **File Manager** by going to **Settings > Data > Manage Files > Manage**. This dashboard allows you to search through all your uploaded documents, view their details, and delete them. Deleting a file here also automatically cleans up any associated Knowledge Base entries and vector embeddings.
+**A:** You can access the **File Manager** by going to **Settings > Data Controls > Manage Files > Manage**. This dashboard allows you to search through all your uploaded documents, view their details, and delete them. Deleting a file here also automatically cleans up any associated Knowledge Base entries and vector embeddings.
 
 ### Q: Can I use Open WebUI in outer space (e.g., Mars and beyond) or other extreme environments?
 
